2007-04-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.4-1 release]

	* README:
	* configure.ac:
	* debian/changelog: Updating.

	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.h: Changing the API guard to
	HILDON_ENABLE_UNSTABLE_API.

2007-04-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.3-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:
	* debian/rules:
	* src/hildon-helper.h: Updating.

2007-04-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.2-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:

2007-04-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* README:
	* configure.ac:
	* src/hildon-helper.h: Small fix to make the package actually compile.

2007-04-25  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.h:

	Guard with ENABLE_UNSTABLE_API. To use the bread crumb you'll need
	to define ENABLE_UNSTABLE_API in the code that includes these headers.
	
2007-04-25  Xan Lopez  <xan.lopez@nokia.com>
	
	* examples/hildon-bread-crumb-trail-example.c:
	* src/Makefile.am:
	* src/hildon-bread-crumb-trail.c:
	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.c:
	* src/hildon-bread-crumb.h:
	* src/hildon-marshalers.list:
	* src/hildon-bread-crumb-widget.c:
	* src/hildon-bread-crumb-widget.h:

	Slight change in the widget design. The bread crumb trail API is
	unchanged, but HildonBreadCrumb is now an interface. A *private*
	implementation, hildon-bread-crumb-widget, is provided and used
	internally by the trail for the push_text/push_icon functions.

	The generic push API is still available, so anyone can implement
	and use its own bread crumb widget.
	
2007-04-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/rules: Fixing the shlibs.

2007-04-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Fixing a problem with timed banners having