@@ -1,3 +1,8 @@
+2007-04-27  Xan Lopez  <xan.lopez@nokia.com>
+
+	* src/hildon-bread-crumb-trail.c: make the add method handle all the
+	internal details of adding a bread crumb to the trail.
+
 2007-04-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	[1.0.4-1 release]
